[project]
name = "sydney-gis-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopy>=2.4.1",
    "h3>=4.2.2",
    "jupyter>=1.1.1",
    "nominatim-api>=5.0.0",
    "nominatim-db>=5.0.0",
    "polars>=1.25.0",
    "psutil==5.9.0",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.6",
    "pyicu>=2.14",
    "tqdm>=4.67.1",
]
